# ghc-comparisons-plugin

./: LICENSE  README  ghc-comparisons-plugin.cabal
GhcPlugins/: Comparisons.hs
GhcPlugins/Comparisons/: Pass.hs
